compnent almost finish

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
     <head>
 
-        <title>Fuse - Angular 7+ Material Design Admin Template</title>
+        <title>BI Scheduler</title>
         <base href="/">
 
         <meta charset="utf-8">
@@ -190,7 +190,7 @@
             <div class="center">
 
                 <div class="logo">
-                    <img width="128" src="assets/images/logos/fuse.svg">
+                    <img width="128"style="background-color:white" src="assets/images/logos/bi-logo-with-tagline.svg">
                 </div>
 
                 <!-- Material Design Spinner -->
